Changed the company name

--- a/personalinfo.html
+++ b/personalinfo.html
@@ -9,7 +9,7 @@
  <script src="personalinfo.js"></script>
 </head>
 <body onLoad="document.registration.firstname.focus();">
-<h1>LIPTA INFOTAINMENT SOLUTIONS PVT.LTD</h1>
+<h1>LIPTA INFOTAINMENT SOLUTIONS </h1>
 <br>
 <br>
 <br>
