again changed like previous data

--- a/personalinfo.html
+++ b/personalinfo.html
@@ -9,12 +9,12 @@
  <script src="personalinfo.js"></script>
 </head>
 <body onLoad="document.registration.firstname.focus();">
-<h1>LIPTA INFOTAINMENT SOLUTIONS </h1>
+<h1>LIPTA INFOTAINMENT SOLUTIONS PVT</h1>
 <br>
 <br>
 <br>
 <br>
-<h2>PERSONAL INFORMATION</h2>
+<h2>PERSONAL INFORMATION:</h2>
 <br>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <b style="font-size:25px">Photo[Less Than 240kb]:<b><input type=file id=fileUp onchange="getImg()">
