new sample files added

--- a/ssamp.html
+++ b/ssamp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> SAMPLE PAGE </title>
+	<title> SAMPLE PAGE FOR CHECKING BRANCHES</title>
 </head>
 <body>
 </body>
