--- a/personalinfo.html
+++ b/personalinfo.html
@@ -14,7 +14,7 @@
 <br>
 <br>
 <br>
-<h2>PERSONAL INFORMATION</h2>
+<h2>PERSONAL INFORMATION:</h2>
 <br>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <b style="font-size:25px">Photo[Less Than 240kb]:<b><input type=file id=fileUp onchange="getImg()">
