--- a/ssamp.html
+++ b/ssamp.html
@@ -3,6 +3,8 @@
 <head>
 	<title> SAMPLE PAGE FOR CHECKING BRANCHES</title>
 </head>
+<script>
+</script>
 <body>
 	<h1> Header1</h1>
 	<h2> header2</h2>
