--- a/ssamp.html
+++ b/ssamp.html
@@ -8,6 +8,6 @@
 <body>
 	<h1> Header1</h1>
 	<h2> header2</h2>
-	<p> this is my paragraph </p>
+	<p> this is my first paragraph </p>
 </body>
 </html>
