--- a/personalinfo.html
+++ b/personalinfo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
 <meta charset="utf-8">
-<title>..:::PERSONAL INFORMATION:::..</title>
+<title>..PERSONAL INFORMATION..</title>
 <meta name="keywords" content="example, JavaScript Form Validation, Sample registration form" />
 <meta name="description" content="This document is an example of JavaScript Form Validation using a sample registration form. " />
 <link rel='stylesheet' href='personalinfo.css' type='text/css' />
