added image in ssamp.html

--- a/ssamp.html
+++ b/ssamp.html
@@ -10,5 +10,6 @@
 	<h2> header2</h2>
 	<p> this is my paragraph </p>
 	<p>for the convenience of checking purpose</p>
+	<img href="" ></img>
 </body>
 </html>
