deleted title  Please enter the commit message for your changes. Lines starting

--- a/ssamp.html
+++ b/ssamp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> SAMPLE PAGE FOR CHECKING BRANCHES</title>
+	<title> SAMPLE PAGE </title>
 </head>
 <script>
 </script>
