--- a/ssamp.html
+++ b/ssamp.html
@@ -1,14 +1,17 @@
-//added single line comments
+
 <!DOCTYPE html>
 <html>
 <head>
-	<title> SAMPLE PAGE FOR CHECKING BRANCHES</title>
+	<title> SAMPLE PAGE </title>
 </head>
 <script>
 </script>
 <body>
 	<h1> Header1</h1>
-	<h2> Header2</h2>
-	<h3> Header3</h3>
+	<h2> header3</h2>
+	<p> this is my paragraph </p>
+	<p>for the convenience of checking purpose</p>
+	<img href="" ></img>
+	<canvas></canvas>
 </body>
 </html>
