adding changes in ssamp.html file

--- a/ssamp.html
+++ b/ssamp.html
@@ -6,9 +6,9 @@
 <script>
 </script>
 <body>
-	<h1> Header1</h1>
-	<h2> header3</h2>
-	<p> this is my paragraph </p>
+	<h1>lipta</h1>
+	<h2>infotainment</h2>
+	<p> bangalore</p>
 	<p>for the convenience of checking purpose</p>
 	<img href="" ></img>
 </body>
